# ChangeLog for dev-ruby/rmagick
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.119 2008/10/06 14:00:22 graaff Exp $

  06 Oct 2008; Hans de Graaff <graaff@gentoo.org> -rmagick-2.5.0.ebuild,
  -rmagick-2.5.1.ebuild, -rmagick-2.5.2.ebuild:
  Remove old versions

*rmagick-2.7.0 (29 Sep 2008)

  29 Sep 2008; Hans de Graaff <graaff@gentoo.org> +rmagick-2.7.0.ebuild:
  Version bump

*rmagick-2.6.0 (17 Sep 2008)

  17 Sep 2008; Hans de Graaff <graaff@gentoo.org> +rmagick-2.6.0.ebuild:
  Version bump.

*rmagick-1.15.15 (17 Sep 2008)

  17 Sep 2008; Hans de Graaff <graaff@gentoo.org> +rmagick-1.15.15.ebuild:
  Version bump with bug fix for handling corrupt JPEG images.

*rmagick-2.5.2 (22 Jul 2008)

  22 Jul 2008; Hans de Graaff <graaff@gentoo.org> +rmagick-2.5.2.ebuild:
  Version bump:
  * Add support for MergeLayer to Magick::ImageList#optimize_layers
  * Add PowQuantumOperator argument for Image#quantum_operator

  22 Jul 2008; Hans de Graaff <graaff@gentoo.org> -rmagick-1.15.12.ebuild,
  -rmagick-2.3.0.ebuild, -rmagick-2.4.0.ebuild:
  Remove old versions

  07 Jul 2008; Raúl Porcel <armin76@gentoo.org> rmagick-1.15.14.ebuild:
  alpha/ia64 stable wrt #230822

  07 Jul 2008; Ferris McCormick <fmccor@gentoo.org> rmagick-1.15.14.ebuild:
  Sparc stable --- Bug #230822 --- it can use itself to build 183 examples.

  07 Jul 2008; Jeroen Roovers <jer@gentoo.org> rmagick-1.15.14.ebuild:
  Stable for HPPA (bug #230822).

  06 Jul 2008; Markus Meier <maekke@gentoo.org> rmagick-1.15.14.ebuild:
  x86 stable, bug #230822

  05 Jul 2008; Thomas Anderson <gentoofan23@gentoo.org>
  rmagick-1.15.14.ebuild:
  stable amd64, bug 230822

  05 Jul 2008; Brent Baude <ranger@gentoo.org> rmagick-1.15.14.ebuild:
  stable ppc64, bug 230822

  05 Jul 2008; Brent Baude <ranger@gentoo.org> rmagick-1.15.14.ebuild:
  stable ppc, bug 230822

*rmagick-2.5.1 (21 Jun 2008)
