@@ -6,17 +6,19 @@ DIST RMagick-1.15.15.tar.bz2 975949 RMD160 f04ff767193c8be0f08171e39873af051a747
 DIST RMagick-2.6.0.tar.bz2 1136458 RMD160 3c46df11c05534a36a7e41340ba0774a39accae8 SHA1 c7e96540468bda24007bfb57358465f9efe3f892 SHA256 a4317e33d139a2c6a5b13ea9008e17149bfff44f71d846e9a0f1a44a6b820e2a
 DIST RMagick-2.7.0.tar.bz2 1138709 RMD160 4ce4be762c10793786b1e07461fa1f3b2c64ac20 SHA1 737dbb552dc7d6a080216ac2f7252b28bea9daf6 SHA256 1c86726c9a72f4671b784d3321debfcd7a90178b6d15fed840cdd88630ef8f00
 DIST RMagick-2.7.1.tar.bz2 1141508 RMD160 3c34bdc9449e83ca79682dd290368be8b36145c8 SHA1 a6709b016dcec653e91541b91b4958bbed816c56 SHA256 0cd4ebd76685b846646dd00d2f3c68143f85db910dfd3b2d23bafe39d36f6a0b
+DIST RMagick-2.7.2.tar.bz2 1143631 RMD160 32ce78d4da8f8c543b8e1d297e5a69afb793259d SHA1 9b35b9b49228a9439742f4580167bcb9ca78b1d2 SHA256 f0a5ddbdfa7621d2bb3174635e43accd669aa2bcf5a2968494ebc4e155612062
 EBUILD rmagick-1.15.14.ebuild 2669 RMD160 775a88e36173ce7063d3cfb6a4b10b90ba3122b7 SHA1 97ff9c8f6cc3f20ffcdfe5ca6a9e90e5f549cacc SHA256 e607c9cf42d25e6734ed8d92000bd139c76e1c705690e5a4a660204856e17222
 EBUILD rmagick-1.15.15.ebuild 2676 RMD160 57f847c5f41ff57c90c368ff3da3f9de314f3bfb SHA1 28927f9ac902a227cf63fbbdbac635c8660c0d74 SHA256 a929274924a8e32a9b558626736c7c961a42485ee145ac42b528733d808047a9
 EBUILD rmagick-2.6.0.ebuild 2638 RMD160 d0e13a3f0a6fb4ad3632891efc6e44fdab30a6cf SHA1 46839db26104ade2f2006f7d07a73aafdf84981a SHA256 7707560f587bf21fcfb96f3bd4fc99707df633858c84e7149a44a87a77a9371d
 EBUILD rmagick-2.7.0.ebuild 2638 RMD160 f8ff6131b7d96f5c4ddc9f26ace5035e1262a760 SHA1 eb8d7af5c84761e8193dd6582e95791d0f94fb64 SHA256 bb952dc6e086f969e9caadb111e4f568a77322f770d07906bb8e3efb0ccdac01
 EBUILD rmagick-2.7.1.ebuild 2638 RMD160 90d01215c1372e7abf892ba4eef90d4846744ae3 SHA1 f12a2b8b84a444a6d36f430d23bbc09f2ce44271 SHA256 32d7fd05b9101ae09ccd9dd00eaa4400694afa868ca190055c642e7812b08377
-MISC ChangeLog 16591 RMD160 eeccba210fb379d76e4b369f4f33e2ba1619ebe5 SHA1 e57a8b5b2673bfab7ccfdc7e23157f20d11afabd SHA256 fc32cf1c74ed76bda1c083988ef31478638292e21b9a8fb282a6e3db81f00555
+EBUILD rmagick-2.7.2.ebuild 2638 RMD160 74247dd268f50ac971c715961fce3345275725f5 SHA1 78ae278bfa2e7882c196c20b95c86711c2733367 SHA256 0cef164fdecbe882266a202258efc7372d1e017d15e6fa8039f8aa7fe13f2fec
+MISC ChangeLog 16800 RMD160 d3b956238b74f66d62a85a72030de5cfd7c89318 SHA1 281c33e49c8ebfb6d37ad68c4204ed931425ad3d SHA256 fb88509db34076360401a7b28dea8917ccead2f4c9282819a9c2822d0bc11feb
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkN1IYACgkQCzgcb6sPj4/RwQCdEmJt2IIGtEQXcilRbyZso2NE
-dkEAn36PPdrIj0trLZtvObtIyKk3o6+V
-=4mQL
+iEYEARECAAYFAkkdOHcACgkQCzgcb6sPj4/zwwCdGeEWRFw4BIMWfCxxeyvd/SDP
+A+8An02WSlL4OkgJ2ejXvwLHSgaMi/n1
+=zJvn
 -----END PGP SIGNATURE-----
