@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/rmagick
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.119 2008/10/06 14:00:22 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rmagick/ChangeLog,v 1.120 2008/11/14 08:35:54 graaff Exp $
+
+*rmagick-2.7.2 (14 Nov 2008)
+
+  14 Nov 2008; Hans de Graaff <graaff@gentoo.org> +rmagick-2.7.2.ebuild:
+  Version bump: fix bug where some Image::Info attribute values are not
+  propogated to the image object
 
   06 Oct 2008; Hans de Graaff <graaff@gentoo.org> -rmagick-2.5.0.ebuild,
   -rmagick-2.5.1.ebuild, -rmagick-2.5.2.ebuild:
